simplify header tags

--- a/public/index.html
+++ b/public/index.html
@@ -55,12 +55,8 @@
 
       <article class="tweet">
         <header>
-          <div id="avatar">
-            <img src="images/profile-hex.png">
-          </div>
-          <div id="userName">
-            <h2>Stella Zhou</h2>
-          </div>
+          <img src="images/profile-hex.png">
+          <h2 id="userName">Stella Zhou</h2>
           <div class="handle">@Sirlsaac</div>
         </header>
         <p>This is the second tweet, yoo ~~~!</p>
@@ -76,12 +72,8 @@
 
       <article class="tweet">
           <header>
-            <div id="avatar">
-              <img src="images/profile-hex.png">
-            </div>
-            <div id="userName">
-              <h2>Stella Zhou</h2>
-            </div>
+            <img src="images/profile-hex.png">
+            <h2 id="userName">Stella Zhou</h2>
             <div class="handle">@newWorld</div>
           </header>
           <p>This is the first tweet, hey ~~~!</p>
