--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,7 @@
       </div>
     </header>
     <!-- Page-specific (main) content here -->
-    <main class="container">
+    <main class="tweets-container">
       <section class="new-tweet">
         <h2>Compose Tweet</h2>
         <form method="POST" action="/tweets">
@@ -71,21 +71,21 @@
       </article>
 
       <article class="tweet">
-          <header>
-            <img src="images/profile-hex.png">
-            <h2 id="userName">Stella Zhou</h2>
-            <div class="handle">@newWorld</div>
-          </header>
-          <p>This is the first tweet, hey ~~~!</p>
-          <footer>
-            <p>20 days ago</p>
-            <div id="icons">
-              <i class="material-icons">flag</i>
-              <i class="material-icons">repeat</i>
-              <i class="material-icons">favorite</i>
-            </div>
-          </footer>
-        </article>
+        <header>
+          <img src="images/profile-hex.png">
+          <h2 id="userName">Stella Zhou</h2>
+          <div class="handle">@newWorld</div>
+        </header>
+        <p>This is the first tweet, hey ~~~!</p>
+        <footer>
+          <p>20 days ago</p>
+          <div id="icons">
+            <i class="material-icons">flag</i>
+            <i class="material-icons">repeat</i>
+            <i class="material-icons">favorite</i>
+          </div>
+        </footer>
+      </article>
     </main>
   </body>
 </html>
