add validation for input before sending ajax request

--- a/public/index.html
+++ b/public/index.html
@@ -46,10 +46,10 @@
     <main class="tweets-container">
       <section class="new-tweet">
         <h2>Compose Tweet</h2>
-        <form method="POST" action="/tweets" id="sumbitForm">
+        <form method="POST" action="/tweets" id="submitForm">
           <textarea name="text" placeholder="What are you humming about?" id="typeBox" data-autosize></textarea>
           <input type="submit" value="Tweet" id="postTweet">
-          <span class="counter" value="140"></span>
+          <span class="counter" value="140">140</span>
         </form>
       </section>
 
