add error message for validation with jquery

--- a/public/index.html
+++ b/public/index.html
@@ -48,7 +48,10 @@
         <h2>Stella Zhou</h2>
       </div>
     </header>
+
     <!-- Page-specific (main) content here -->
+    <div class="validationError"></div>
+
     <section class="new-tweet">
       <h2>Compose Tweet</h2>
       <form method="POST" action="/tweets" id="submitForm">
