--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,13 @@
     <!-- Meta Information -->
     <title>Tweeter - Home Page</title>
     <meta charset="UTF-8">
+    <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0' />
 
     <!-- External CSS -->
     <link rel="stylesheet" href="/vendor/normalize-4.1.1.css" type="text/css" />
     <!-- Google Font Embed -->
     <link href="https://fonts.googleapis.com/css?family=Bungee|Source+Sans+Pro:300,300i,700,700i&display=swap" rel="stylesheet">
+     <!-- Material Icons Embed -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
 
@@ -31,6 +33,7 @@
     <!-- Top nav bar (fixed) -->
     <nav>
       <span>tweeter</span>
+      <!-- toggle button for new tweet editing form  -->
       <button class="tweet-button">
         <strong>Write</strong> a new tweet
         <div class="arrowBounce">
@@ -38,31 +41,41 @@
         </div>
       </button>
     </nav>
+    
+    <!-- flexbox contain header && tweets -->
+    <div class="flex-container">
 
-    <header>
-      <div id="avatar">
-        <img src="images/profile-hex.png">
+      <!-- User Header here -->
+      <header id="topHeader">
+        <div id="avatar">
+          <img src="images/profile-hex.png">
+        </div>
+        <br>
+        <div id="userName">
+          <h2>Stella Zhou</h2>
+        </div>
+      </header>
+
+      <!-- Page-specific (main) content here -->
+      <div class="content">
+        <!-- compose new tweet -->
+        <section class="new-tweet">
+          <h2>Compose Tweet</h2>
+          <form method="POST" action="/tweets" id="submitForm">
+            <!-- validation error message -->
+            <div class="validationError"></div>
+            <!-- text input area -->
+            <textarea name="text" placeholder="What are you humming about?" id="typeBox"></textarea>
+            <!-- submit button -->
+            <input type="submit" value="Tweet" id="postTweet">
+            <!-- text count -->
+            <span class="counter">140</span>
+          </form>
+        </section>
+
+        <!-- posted tweets-->
+        <main class="tweets-container"></main>
       </div>
-      <br>
-      <div id="userName">
-        <h2>Stella Zhou</h2>
-      </div>
-    </header>
-
-    <!-- Page-specific (main) content here -->
-    <div class="validationError"></div>
-
-    <section class="new-tweet">
-      <h2>Compose Tweet</h2>
-      <form method="POST" action="/tweets" id="submitForm">
-        <textarea name="text" placeholder="What are you humming about?" id="typeBox" data-autosize></textarea>
-        <input type="submit" value="Tweet" id="postTweet">
-        <span class="counter">140</span>
-      </form>
-    </section>
-
-    <main class="tweets-container">
-      
-    </main>
+    </div>    
   </body>
 </html>
